adding python docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
   - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
 install:
   - pip install molecule
-  # - pip install required driver (e.g. docker, python-vagrant, shade)
+   - pip install required driver
 script:
   - molecule test
