--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
 install:
-  - pip install molecule
-   - pip install required driver
+  - pip install molecule required driver equired driver
 script:
   - molecule test
